# UltimateOpTeam

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: milp_model.tex
src/data/: formations.json  player.py
src/optim/: milp_model.py
src/ultimate_opteam/data/: __init__.py  formations.json  league_pairs.json  player.py  team.py
src/ultimate_opteam/optim/: milp_model.py
src/ultimate_opteam/scrap/: fetch_players.py
tests/: conftest.py  test_milp_model.py  test_player.py  test_team.py
