[project]
name = "ultimate-opteam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.3.1",
    "numpy>=2.1.3",
    "pychoco>=0.2.1",
    "ruff>=0.8.1",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
]
