[project]
name = "ultimate-opteam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.3.1",
    "loguru>=0.7.3",
    "mypy>=1.14.1",
    "numpy>=2.1.3",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "pychoco>=0.2.1",
    "pytest>=9.0.2",
    "ruff>=0.8.1",
    "scipy>=1.15.0",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
]
